[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/Waffles/Editor/stretch_slider.gd" type="Script" id=1]

[node name="stretch_slider" type="HSlider"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -133.0
margin_top = 13.0
margin_right = -30.0
margin_bottom = 29.0
min_value = 0.5
max_value = 20.0
step = 0.1
value = 4.0
exp_edit = true
ticks_on_borders = true
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 5.0
margin_top = 18.0
margin_right = 45.0
margin_bottom = 32.0

[node name="Panel" type="Panel" parent="."]
visible = false
show_behind_parent = true
anchor_left = -0.126214
anchor_top = -0.375
anchor_right = 1.14563
anchor_bottom = 2.5
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="drag_ended" from="." to="." method="_on_stretch_slider_drag_ended"]
[connection signal="value_changed" from="." to="." method="_on_stretch_slider_value_changed"]
